# Module9

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
companies/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
companies/migrations/: 0001_initial.py  0002_alter_company_options_joinrequest.py
core/: api_urls.py  asgi.py  settings.py  urls.py  wsgi.py
docker/: entrypoint.sh
products/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_options_alter_supply_options_and_more.py
sales/: admin.py  analytics.py  models.py  permissions.py  serializers.py  urls.py  views.py
sales/migrations/: 0001_initial.py  0002_remove_productsale_price_at_sale.py
storages/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
storages/migrations/: 0001_initial.py
suppliers/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
suppliers/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
